# rust-api-testing

./: .env  Cargo.toml  README.md
src/: main.rs
src/api/: catchers.rs  config.rs  logging.rs  mod.rs  server.rs
src/api/routes/: images.rs  index.rs  mod.rs
src/logger/: mod.rs
