[package]
name = "api-testing"
version = "0.1.0"
authors = ["Noah Templet <contact@noahtemplet.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.10" }
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json", "serve"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
fern = { version = "0.5", features = [ "colored" ] }
chrono = "0.4.19"
lazy_static = "1.4.0"
colored = "2.0.0"
multipart = "0.18.0"
image = "0.23.14"